feat: 更改rollup打包,增加功能配置

--- a/example/index.html
+++ b/example/index.html
@@ -7,5 +7,7 @@
     <meta name="keywords" content="" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <script src="./index.ts" type="module"></script>
+  </body>
 </html>
